export class Distribucioninstrucciones {
	opcdistrinstrucciones: string = null;
	opcdistrinstruccionesItem: string = null;
	capturados: boolean = false;
	contrato: string  = null;
	foliomov: string  = null;
	digito: string  = null;
	importeneto: string  = null;
	depositos: boolean = false;
	retiros: boolean = false;
	dummy: string = null;
	dummyItem: string = null;
}
