export class Firmaautorizada {
	nombre: string  = null;
	appaterno: string  = null;
	apmaterno: string  = null;
	noescr: string  = null;
	nonot: string  = null;
}
