export class Negativaperfilamiento {
	contratoId: string = null;
	contratoItem: string = null;
	nombre: string  = null;
	perfilactual: string  = null;
	dummy: string = null;
	dummyItem: string = null;
	porcentajeliquidez: string  = null;
	montoliquidez: number = null;
	montoliquidezAux: Date = new Date();
	porcentajecortoplazo: string  = null;
	montocortoplazo: number = null;
	porcentajelargoplazo: string  = null;
	montolargoplazo: number = null;
	porcentajepatrimonioliquidototal: string  = null;
	montopatrimonioliquidototal: number = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	nosi: string = null;
	nosiItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	conocimientoexperiencia: string = null;
	conocimientoexperienciaItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	conocimientoexperiencia: string = null;
	conocimientoexperienciaItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	nosi: string = null;
	nosiItem: string = null;
	situacionfinancieraactual: string = null;
	situacionfinancieraactualItem: string = null;
	situacionfinancieraactual: string = null;
	situacionfinancieraactualItem: string = null;
	situacionfinancieraactual: string = null;
	situacionfinancieraactualItem: string = null;
	perfil: string = null;
	inconsistencias: string  = null;
}
