export class Titularcontrato {
	nombre: string  = null;
	dummy: string = null;
	dummyItem: string = null;
	noclientebanamex: string  = null;
	dummy: string = null;
	dummyItem: string = null;
	nocta: string  = null;
	suc: string  = null;
	clabe: string  = null;
	calle: string  = null;
	noext: string  = null;
	nointerior: string  = null;
	mexicoextrajero: string = null;
	mexicoextrajeroItem: string = null;
	cp: string  = null;
	estado: string  = null;
	delmpo: string  = null;
	ciudad: string  = null;
	colonia: string  = null;
	nosi: string = null;
	nosiItem: string = null;
	rfc: string  = null;
	curp: string  = null;
	fecnac: number = null;
	fecnacAux: Date = new Date();
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	dummy: string = null;
	dummyItem: string = null;
	nosi: string = null;
	nosiItem: string = null;
}
